--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PROJECT S TEST</title>
+	<title>PROJECT S TESTING</title>
 	<link rel="icon" type="text/css" href="images/new_logo.png" sizes="">    
 	<link rel="stylesheet" type="text/css" href="easyui/themes/default/easyui.css">
 	<link rel="stylesheet" type="text/css" href="easyui/themes/icon.css">
