--- a/main.html
+++ b/main.html
@@ -161,7 +161,19 @@ border:0;
 							<div style="padding-bottom: 10px;">
 								<input type="text" id="txtbx_eventdesc" style="width: 100%; height: 60px;">
 							</div>
-							
+							<div style="padding-bottom: 10px;">
+								<input type="text" id="dtbx_startdt" style="width: 100%;">
+							</div>
+						</div>
+
+						<!-- DIALOG NEW CATEGORY -->
+						<div id="dlg_new_category" style="padding: 5px;">
+							<div style="padding-bottom: 10px;">
+								<input type="text" id="txtbx_categoryname" style="width: 100%;">
+							</div>
+							<div style="padding-bottom: 10px;">
+								<input type="text" id="txtbx_categorydesc" style="width: 100%;">
+							</div>
 						</div>
 				</div>
 			</div>
