--- a/main.html
+++ b/main.html
@@ -150,20 +150,24 @@ border:0;
 							<div id="btn_event">Event</div>
 							<div id="btn_category">Category</div>
 						</div>
+					<a href="#" id="btn_edit_event">Edit</a>
 						<!-- DIALOG BOX NEW EVENT -->
-						<div id="dlg_new_event" style="padding: 5px;">
-							<div style="padding-bottom: 10px;">
-								<input type="text" id="txtbx_eventname" style="width: 100%;">
-							</div>
-							<div style="padding-bottom: 10px;">
-								<input id="cc_category" name="category_id" style="width: 100%;">
-							</div>
-							<div style="padding-bottom: 10px;">
-								<input type="text" id="txtbx_eventdesc" style="width: 100%; height: 60px;">
-							</div>
-							<div style="padding-bottom: 10px;">
-								<input type="text" id="dtbx_startdt" style="width: 100%;">
-							</div>
+						<div id="dlg_new_event">
+							<form id="fm_event" method="post" novalidate style="margin:0;padding:20px 20px">
+								<h3>Event Information</h3>
+								<div style="padding-bottom: 10px;">
+									<input type="text" id="txtbx_eventname" name="event_name" style="width: 100%;">
+								</div>
+								<div style="padding-bottom: 10px;">
+									<input id="cc_category" name="category_name" style="width: 100%;">
+								</div>
+								<div style="padding-bottom: 10px;">
+									<input type="text" id="txtbx_eventdesc" name="event_description" style="width: 100%; height: 60px;">
+								</div>
+								<div style="padding-bottom: 10px;">
+									<input type="text" id="dtbx_startdt" name="start_dt" style="width: 100%;">
+								</div>
+							</form>
 						</div>
 
 						<!-- DIALOG NEW CATEGORY -->
