--- a/main.html
+++ b/main.html
@@ -159,7 +159,7 @@ border:0;
 									<input type="text" id="txtbx_eventname" name="event_name" style="width: 100%;">
 								</div>
 								<div style="padding-bottom: 10px;">
-									<input id="cc_category" name="category_name" style="width: 100%;">
+									<input id="cc_category" name="event_category_id" style="width: 100%;">
 								</div>
 								<div style="padding-bottom: 10px;">
 									<input type="text" id="txtbx_eventdesc" name="event_description" style="width: 100%; height: 60px;">
