--- a/main.html
+++ b/main.html
@@ -12,8 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script type="text/javascript" src="easyui/jquery.min.js"></script>
-	<script type="text/javascript" src="easyui/jquery.easyui.min.js"></script>
-	<script type="text/javascript" src="../smiles/js/date_formatter.js"></script>
+	<script type="text/javascript" src="easyui/jquery.easyui.min.js"></script>	
 	<script type="text/javascript" src="easyui/datagrid-detailview.js"></script>
 
 	<script type="text/javascript" src="js/main.js"></script>
@@ -120,8 +119,8 @@ border:0;
 
 							<!-- NORTH NAV HEADER TOOLBAR -->
 							<div id="rg_tab_nvbtns">
-								<!-- <a id="btn_start" href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true">Start</a> -->
 								<a id="btn_void" href="#" class="easyui-linkbutton" iconCls="icon-cancel" plain="true" style="float: right;">Void</a>
+								<a id="btn_search" href="#" class="easyui-linkbutton" iconCls="icon-search" plain="true" style="float: right;">Search</a>
 								<a id="btn_done" href="#" class="easyui-linkbutton" iconCls="icon-ok" plain="true">Done</a>
 							</div>
 						</div>
