--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ border:0;
 				<div id="tb_event">
 					<a href="#" id="btn_event">Create Event</a>
 					<a href="#" id="btn_edit_event">Edit</a>
+					<a href="#" id="btn_remove_event">Remove</a>
 					<a href="#" id="mb_options" style="float: right;">Options</a>
 						<div id="mm_options">
 							<div id="btn_category">Category</div>
@@ -168,7 +169,7 @@ border:0;
 							<input type="text" id="txtbx_eventdesc" name="event_description" style="width: 100%; height: 60px;">
 						</div>
 						<div style="padding-bottom: 10px;">
-							<input type="text" id="nbrbx_fee" style="width: 100%;">
+							<input type="text" id="nbrbx_fee" name="fee" style="width: 100%;">
 						</div>
 						<div style="padding-bottom: 10px;">
 							<input type="text" id="dtbx_startdt" name="start_dt" style="width: 100%;">
@@ -183,15 +184,15 @@ border:0;
 				<div id="ft_category">
 					<a href="#" id="btn_ft_close" style="float: right;">Close</a>
 				</div>
-				<!-- DIALOG NEW CATEGORY -->
-				<div id="dlg_new_category" style="padding: 5px;">
+				<!-- DIALOG CATEGORY -->
+				<div id="dlg_category" style="padding: 5px;">
 					<form id="fm_category" method="post" novalidate style="margin: 0;padding:20px 20px;">
 						<h3>Category Information</h3>
 						<div style="padding-bottom: 10px;">
 							<input type="text" id="txtbx_categoryname" name="category_name" style="width: 100%;">
 						</div>
 						<div style="padding-bottom: 10px;">
-							<input type="text" id="txtbx_categorydesc" name="category_desc" style="width: 100%;">
+							<input type="text" id="txtbx_categorydesc" name="category_description" style="width: 100%;">
 						</div>
 					</form>
 				</div>
