--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				fit:true,
 				tabHeight:80,
 				tabWidth:120,
-				selected:2
+				selected:0
 			});	
 		});
 	</script>
@@ -86,7 +86,7 @@ border:0;
 										<input  name="student_id" id="txtbx_stid" type="text" style="width: 100%;">
 									</div>
 									<div class="gen-padding ff_regtab_flds">
-										<input  id="nbrbx_transid" type="text" style="width: 100%;">
+										<input  id="nbrbx_transid" name="trans_id" type="text" style="width: 100%;">
 									</div>
 									<div class="gen-padding ff_regtab_flds">
 										<input  name="lastname" id="txtbx_ln" type="text" style="width: 100%;">
