--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ border:0;
 		<div style="color: white; padding-top: 10px; font-size: 22px; float: left;">
 			<label>STUDENT-COUNCIL MANAGEMENT SYSTEM - <span id="user"></span></label>
 		</div>
-		<div style="float: right; margin: 10px 10px">
+		<div style="float: right; margin: 8px 10px">
 			<a href="#" id="btn_logout">Logout</a>
 		</div>
 	</div>
@@ -147,7 +147,7 @@ border:0;
 
 				<!-- TOOLBAR -->
 				<div id="tb_event">
-					<a href="#" id="btn_event">Create Event</a>
+					<a href="#" id="btn_event">Create</a>
 					<a href="#" id="btn_edit_event">Edit</a>
 					<a href="#" id="btn_remove_event">Remove</a>
 					<a href="#" id="mb_options" style="float: right;">Options</a>
