--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ border:0;
 
 							<!-- NORTH NAV HEADER TOOLBAR -->
 							<div id="rg_tab_nvbtns">
-								<a id="btn_void" href="#" class="easyui-linkbutton" iconCls="icon-cancel" plain="true" style="float: right;">Void</a>
-								<a id="btn_search" href="#" class="easyui-linkbutton" iconCls="icon-search" plain="true" style="float: right;">Search</a>
-								<a id="btn_done" href="#" class="easyui-linkbutton" iconCls="icon-ok" plain="true">Done</a>
+								<a id="btn_void" href="#" style="float: right;">Void</a>
+								<!-- <a id="btn_search" href="#" style="float: right;">Search</a> -->
+								<a id="btn_done" href="#">Done</a>
 							</div>
 						</div>
 					</div>
