--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 	.center {
     margin: auto;
     width: 400px;
-    padding-top: 100px;
+    padding-top: 10px;
 }
 </style>
 </head>
@@ -36,6 +36,7 @@
 	<!-- CENTER -->
 	<div data-options="region:'center'">
 		<div class="center">
+			<img src="images/new_logo.png" style="width: 150px;margin-left: auto;margin-right: auto;display: block;">
 			<div id="panel" style="width: 100%;padding:20px 20px;">
 				<form id="ff_login" method="post">
 			        <div style="margin-bottom:20px">
