--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				fit:true,
 				tabHeight:80,
 				tabWidth:120,
-				selected:4
+				selected:0
 			});
 		});
 	</script>
@@ -258,16 +258,22 @@ border:0;
 			        <form id="fm_std" method="post" novalidate style="margin:0;padding:20px 50px">
 			            <h3>Student Information</h3>
 			            <div style="margin-bottom:10px">
-			                <input name="fname" id="fn_std" label="First Name" style="width:100%">
+			                <input name="student_id" id="stdid" label="Student ID" style="width:100%">
 			            </div>
 			            <div style="margin-bottom:10px">
-			                <input name="lname" id="ln_std" label="Last Name" style="width:100%">
+			                <input name="firstname" id="fn_std" label="First Name" style="width:100%">
 			            </div>
 			            <div style="margin-bottom:10px">
-			                <input name="contact_no" id="contact_no_std" label="Phone No:" style="width:100%">
+			                <input name="lastname" id="ln_std" label="Last Name" style="width:100%">
 			            </div>
 			            <div style="margin-bottom:10px">
-			                <input name="email" id="email_std" validType="email" label="Email:" style="width:100%">
+			                <input name="dob" id="dob" label="Date of Birth" style="width:100%">
+			            </div>
+			            <div style="margin-bottom:10px">
+			                <input name="phone" id="phone" label="Phone No:" style="width:100%">
+			            </div>
+			            <div style="margin-bottom:10px">
+			                <input name="email" id="email" validType="email" label="Email:" style="width:100%">
 			            </div>
 			        </form>
 			    </div>
