--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ border:0;
 					<div data-options="region:'west', width:500">
 						<div class="container">
 							<div id="ctr" class="gen-padding">
-								<form id="ff_regtab" method="post">
+								<form id="fm_regtab" method="post">
 									<div class="gen-padding ff_regtab_flds">
 										<input  name="student_id" id="txtbx_stid" type="text" style="width: 100%;">
 									</div>
@@ -103,10 +103,10 @@ border:0;
 								<div id="dlg_confirmation" style="padding: 15px;">
 									<form id="fm_cmf" method="post">
 										<div style="margin-bottom: 10px;">
-											<input type="text" id="cc_ttype" style="width: 100%;">
+											<input type="text" id="cc_ttype" name="ttype" style="width: 100%;">
 										</div>
 										<div style="margin-bottom: 10px;">
-											<input type="text" id="tb_remarks" style="width: 100%;">
+											<input type="text" id="tb_remarks" name="remarks" style="width: 100%;">
 										</div>
 									</form>
 								</div>
