--- a/index.html
+++ b/index.html
@@ -101,14 +101,16 @@ border:0;
 
 								<!-- CONFIRMATION DLG -->
 								<div id="dlg_confirmation" style="padding: 15px;">
-									<form id="fm_cmf" method="post">
-										<div style="margin-bottom: 10px;">
-											<input type="text" id="cc_ttype" name="ttype" style="width: 100%;">
-										</div>
-										<div style="margin-bottom: 10px;">
-											<input type="text" id="tb_remarks" name="remarks" style="width: 100%;">
-										</div>
-									</form>
+									<div id="dd">
+										<form id="fm_cmf" method="post">
+											<div style="margin-bottom: 10px;">
+												<input type="text" id="cc_ttype" name="ttype" style="width: 100%;">
+											</div>
+											<div style="margin-bottom: 10px;">
+												<input type="text" id="tb_remarks" name="remarks" style="width: 100%;">
+											</div>
+										</form>
+									</div>
 								</div>
 
 								<!-- PAYMENT DLG -->
